# web-template

./: .bazel_fix_commands.json  .bazelrc  .deepsource.toml  Makefile  README.md  WORKSPACE  deps.bzl
.circleci/: config.yml
api/: .cutie.yaml  BUILD.bazel  go.mod  go.sum  gqlgen.yml  main.go  sqlc.json
api/clients/manufacturer-api/: BUILD.bazel  client.go  local_server.go
api/clients/operating-system-api/: BUILD.bazel  client.go  local_server.go
api/dbmodels/manufacturer/: BUILD.bazel  db.go  manufacturer.sql.go  models.go  querier.go
api/dbmodels/manufacturer/mock_manufacturer/: BUILD.bazel  querier_mock.go
api/dbmodels/operating_system/: BUILD.bazel  db.go  models.go  operating_system.sql.go  querier.go
api/dbmodels/operating_system/mock_operating_system/: BUILD.bazel  querier_mock.go
api/ent/: BUILD.bazel  client.go  config.go  manufacturer.go  manufacturer_create.go  manufacturer_delete.go  manufacturer_query.go  manufacturer_update.go  mutation.go  operatingsystem.go  operatingsystem_create.go  operatingsystem_delete.go  operatingsystem_query.go  operatingsystem_update.go  os.go  os_create.go  os_delete.go  os_query.go  os_update.go  phone.go  phone_create.go  phone_delete.go  phone_query.go  phone_update.go  runtime.go  tx.go
api/ent/enttest/: BUILD.bazel  enttest.go
api/ent/hook/: BUILD.bazel  hook.go
api/ent/manufacturer/: BUILD.bazel  manufacturer.go  where.go
api/ent/migrate/: BUILD.bazel  schema.go
api/ent/operatingsystem/: BUILD.bazel  operatingsystem.go  where.go
api/ent/os/: os.go  where.go
api/ent/phone/: BUILD.bazel  phone.go  where.go
api/ent/predicate/: BUILD.bazel  predicate.go
api/ent/runtime/: BUILD.bazel  runtime.go
api/ent/schema/: BUILD.bazel  manufacturer.go  name_mixin.go  operatingsystem.go  os.go  phone.go  timestamp_mixin.go
api/graphql/: BUILD.bazel  manufacturer.resolvers.go  operating_system.resolvers.go  os.resolvers.go  phone.resolvers.go  resolver.go
api/graphql/model/: BUILD.bazel  models_gen.go
api/manufacturer-api/repo/: BUILD.bazel  reader.go  reader_test.go  types.go  writer.go
api/manufacturer-api/server/: BUILD.bazel  read_server.go  types.go  write_server.go
api/operating-system-api/repo/: BUILD.bazel  reader.go  reader_test.go  translations.go  types.go  writer.go
api/operating-system-api/server/: BUILD.bazel  read_server.go  types.go  write_server.go
api/phone-api/repo/: BUILD.bazel  hydrated_reader.go  hydration.go  reader.go  reader_test.go  repo.go  translations.go  types.go  writer.go
api/repo/phone/: BUILD.bazel  phone.go
api/schema/migrate/common/: BUILD.bazel  migrate.go
api/schema/migrate/dev/: BUILD.bazel  main.go
api/schema/migrate/test/: BUILD.bazel  main.go
envoy/: envoy.yaml
web/: .eslintrc.js  .gitignore  BUILD.bazel  jest.config.ts  package.json
web/clients/: api_client.ts  node_client.ts
web/clients/grpc-web/: make_service_client.ts  make_writer_client.ts  manufacturer_reader_client.ts  manufacturer_writer_client.ts  operating_system_reader_client.ts  operating_system_writer_client.ts  os_service_client.ts  os_writer_client.ts  phone_service_client.ts  phone_writer_client.ts
web/clients/nodejs/: make_service_client.ts  make_writer_client.ts  manufacturer_reader_client.ts  manufacturer_writer_client.ts  operating_system_reader_client.ts  operating_system_writer_client.ts  os_service_client.ts  os_writer_client.ts  phone_service_client.ts  phone_writer_client.ts
web/components/: container.tsx  getOne.ts  listPage.tsx  manufacturer.tsx  operating_system.tsx  os.tsx  phone.tsx
web/conversions/: make.test.ts  make.ts  manufacturer.test.ts  manufacturer.ts  operating_system.test.ts  operating_system.ts  os.test.ts  os.ts  os.tsx
web/pages/: 404.tsx  graph.tsx  index.tsx
web/pages/make/: [id].tsx  index.tsx  new.tsx
web/pages/manufacturer/: [id].tsx  index.tsx  new.tsx
web/pages/operating_system/: [id].tsx  index.tsx  new.tsx
web/pages/os/: [id].tsx  index.tsx  new.tsx
web/pages/phone/: [id].tsx  index.tsx
web/protobuf/app/: app_pb.d.ts  app_pb.js
web/protobuf/make/: Make_readerServiceClientPb.ts  Make_serviceServiceClientPb.ts  Make_writerServiceClientPb.ts  make_pb.d.ts  make_pb.js  make_reader_grpc_pb.d.ts  make_reader_grpc_pb.js  make_reader_pb.d.ts  make_reader_pb.js  make_service_grpc_pb.d.ts  make_service_grpc_pb.js  make_writer_grpc_pb.d.ts  make_writer_grpc_pb.js  make_writer_pb.d.ts  make_writer_pb.js
web/protobuf/manufacturer/: Manufacturer_readerServiceClientPb.ts  Manufacturer_writerServiceClientPb.ts  manufacturer_pb.d.ts  manufacturer_pb.js  manufacturer_reader_grpc_pb.d.ts  manufacturer_reader_grpc_pb.js  manufacturer_reader_pb.d.ts  manufacturer_reader_pb.js  manufacturer_writer_grpc_pb.d.ts  manufacturer_writer_grpc_pb.js  manufacturer_writer_pb.d.ts  manufacturer_writer_pb.js
web/protobuf/operating_system/: Operating_system_readerServiceClientPb.ts  Operating_system_writerServiceClientPb.ts  operating_system_pb.d.ts  operating_system_pb.js  operating_system_reader_grpc_pb.d.ts  operating_system_reader_grpc_pb.js  operating_system_reader_pb.d.ts  operating_system_reader_pb.js  operating_system_writer_grpc_pb.d.ts  operating_system_writer_grpc_pb.js  operating_system_writer_pb.d.ts  operating_system_writer_pb.js
web/protobuf/os/: Os_readerServiceClientPb.ts  Os_serviceServiceClientPb.ts  Os_writerServiceClientPb.ts  os_pb.d.ts  os_pb.js  os_reader_grpc_pb.d.ts  os_reader_grpc_pb.js  os_reader_pb.d.ts  os_reader_pb.js  os_service_grpc_pb.d.ts  os_service_grpc_pb.js  os_writer_grpc_pb.d.ts  os_writer_grpc_pb.js  os_writer_pb.d.ts  os_writer_pb.js
web/protobuf/phone/: Phone_readerServiceClientPb.ts  Phone_serviceServiceClientPb.ts  Phone_writerServiceClientPb.ts  phone_pb.d.ts  phone_pb.js  phone_reader_grpc_pb.d.ts  phone_reader_grpc_pb.js  phone_reader_pb.d.ts  phone_reader_pb.js  phone_service_grpc_pb.d.ts  phone_service_grpc_pb.js  phone_service_pb.d.ts  phone_service_pb.js  phone_writer_grpc_pb.d.ts  phone_writer_grpc_pb.js  phone_writer_pb.d.ts  phone_writer_pb.js
web/public/: BUILD.bazel
web/styles/: BUILD.bazel
(+145 files in other folders)
