load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "ent",
    srcs = [
        "client.go",
        "config.go",
        "context.go",
        "ent.go",
        "generate.go",
        "manufacturer.go",
        "manufacturer_create.go",
        "manufacturer_delete.go",
        "manufacturer_query.go",
        "manufacturer_update.go",
        "mutation.go",
        "operatingsystem.go",
        "operatingsystem_create.go",
        "operatingsystem_delete.go",
        "operatingsystem_query.go",
        "operatingsystem_update.go",
        "phone.go",
        "phone_create.go",
        "phone_delete.go",
        "phone_query.go",
        "phone_update.go",
        "runtime.go",
        "tx.go",
    ],
    importpath = "github.com/rickypai/web-template/api/ent",
    visibility = ["//visibility:public"],
    deps = [
        "//api/ent/manufacturer",
        "//api/ent/migrate",
        "//api/ent/operatingsystem",
        "//api/ent/phone",
        "//api/ent/predicate",
        "//api/ent/schema",
        "@io_entgo_ent//:ent",
        "@io_entgo_ent//dialect",
        "@io_entgo_ent//dialect/sql",
        "@io_entgo_ent//dialect/sql/sqlgraph",
        "@io_entgo_ent//schema/field",
    ],
)
