load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "manufacturer",
    srcs = [
        "db.go",
        "manufacturer.sql.go",
        "models.go",
        "querier.go",
    ],
    importpath = "github.com/rickypai/web-template/api/dbmodels/manufacturer",
    visibility = ["//visibility:public"],
    deps = ["@com_github_lib_pq//:pq"],
)
