load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "manufacturer",
    srcs = [
        "manufacturer.go",
        "where.go",
    ],
    importpath = "github.com/rickypai/web-template/api/ent/manufacturer",
    visibility = ["//visibility:public"],
    deps = [
        "//api/ent/predicate",
        "@io_entgo_ent//dialect/sql",
        "@io_entgo_ent//dialect/sql/sqlgraph",
    ],
)
