load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "phone",
    srcs = [
        "phone.go",
        "where.go",
    ],
    importpath = "github.com/rickypai/web-template/api/ent/phone",
    visibility = ["//visibility:public"],
    deps = [
        "//api/ent/predicate",
        "@io_entgo_ent//dialect/sql",
        "@io_entgo_ent//dialect/sql/sqlgraph",
    ],
)
