load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "repo",
    srcs = [
        "reader.go",
        "translations.go",
        "types.go",
        "writer.go",
    ],
    importpath = "github.com/rickypai/web-template/api/manufacturer-api/repo",
    visibility = ["//visibility:public"],
    deps = [
        "//api/dbmodels/manufacturer",
        "//api/server/cursor",
        "//protobuf/manufacturer",
        "@org_golang_google_protobuf//types/known/timestamppb",
    ],
)

go_test(
    name = "repo_test",
    srcs = ["reader_test.go"],
    embed = [":repo"],
    deps = [
        "//api/config",
        "//api/server/cursor",
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//require",
    ],
)
