load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "repo",
    srcs = [
        "hydrated_reader.go",
        "hydration.go",
        "reader.go",
        "translations.go",
        "types.go",
        "writer.go",
    ],
    importpath = "github.com/rickypai/web-template/api/phone-api/repo",
    visibility = ["//visibility:public"],
    deps = [
        "//api/dbmodels/phone",
        "//api/server/cursor",
        "//protobuf/manufacturer",
        "//protobuf/operating_system",
        "//protobuf/phone",
        "@org_golang_google_protobuf//types/known/timestamppb",
        "@org_golang_x_sync//errgroup",
    ],
)

go_test(
    name = "repo_test",
    srcs = ["reader_test.go"],
    embed = [":repo"],
    deps = [
        "//api/config",
        "//api/manufacturer-api/repo",
        "//api/operating-system-api/repo",
        "//protobuf/manufacturer",
        "//protobuf/operating_system",
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//require",
    ],
)
