load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "phone",
    srcs = ["phone.go"],
    importpath = "github.com/rickypai/web-template/api/repo/phone",
    visibility = ["//visibility:public"],
    deps = [
        "//api/dbmodels/phone",
        "//protobuf/make",
        "//protobuf/os",
        "//protobuf/phone",
        "@org_golang_google_protobuf//types/known/timestamppb",
    ],
)
