load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "common",
    srcs = ["migrate.go"],
    importpath = "github.com/rickypai/web-template/api/schema/migrate/common",
    visibility = ["//visibility:public"],
    deps = [
        "//api/config",
        "//api/ent/migrate",
    ],
)
