load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "test_lib",
    srcs = ["main.go"],
    importpath = "github.com/rickypai/web-template/api/schema/migrate/test",
    visibility = ["//visibility:private"],
    deps = [
        "//api/config",
        "//api/schema/migrate/common",
    ],
)

go_binary(
    name = "test",
    embed = [":test_lib"],
    visibility = ["//visibility:public"],
)
